# OptimalBinaryTree

./: CMakeLists.txt  test.sh
binaryTree/: CMakeLists.txt
binaryTree/inc/: binaryTree.h
optSearch/: CMakeLists.txt
optSearch/inc/: optSearch.h
optSearch/src/: optSearch.cc
test/: CMakeLists.txt
test/src/: binaryTree_test.cc  optBinaryTree_test.cc
